--- a/moviepy/javascript/helloWorld.html
+++ b/moviepy/javascript/helloWorld.html
@@ -9,7 +9,8 @@
     <canvas id="canvas" width="500" height="500"></canvas>
     <img src="../body2.png" id="bodyImage" alt="bodyImage" style="display: none">
     <div class="slidecontainer">
-        <input type="range" min="1" max="1000" value="1" class="slider" id="myRange">
+        <p>Adjust attention:</p>
+        <input type="range" min="0" max="999" value="500" class="slider" id="myRange">
     </div>
 
     <script src="sensation.js"></script>
