--- a/moviepy/javascript/sensation.html
+++ b/moviepy/javascript/sensation.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>JavaScript Hello World Example</title>
+    <title>How the Body is Constituted through Sensation and Attention</title>
 </head>
 
 <body>
