--- a/moviepy/javascript/sensation.html
+++ b/moviepy/javascript/sensation.html
@@ -6,14 +6,15 @@
 </head>
 
 <body>
+    <h2>The constitution of the body through sensation and attention:</h2>
     <canvas id="canvas" width="500" height="500"></canvas>
-    <img src="../body2.png" id="bodyImage" alt="bodyImage" style="display: none">
+    <img src="body2.png" id="bodyImage" alt="bodyImage" style="display: none">
     <div class="slidecontainer">
-        <p>Adjust attention:</p>
+        <p>Adjust attention to sensation:</p>
         <input type="range" min="0" max="999" value="500" class="slider" id="myRange">
     </div>
 
-    <script src="sensation.js"></script>
+    <script src="sensation3.js"></script>
 
 </body>
 </html>
